# omegabot-controller

./: CMakeLists.txt  DOCUMENTATION.md  DOCUMENTATION_v2.md  README.md  arduino.cpp  client.cpp  microcontroller.cpp  operator.cpp  raspberry.cpp  raspberry_receive_cam.cpp  raspberry_send_cam.cpp  server.cpp  server_without_qt  server_without_qt.cpp  yolo_detection.py
omega_microcontroller/src/: main.cpp
